[package]
name = "http-hello-world"
edition = "2021"
version = "0.1.0"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { version = "1",  default-features = false }
serde = {version = "1.0.203", features = ["derive"]}
serde_json = "1.0.118"
uuid = {version = "1.9.1", features = ["v4"]}
wasmcloud-actor-http-server = "0.1.2"
wit-bindgen = { version = "0.24", features = ["default"] }
